added /about using flow router

--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -1,4 +1,6 @@
-<template name="hello">
+<template name="main">
+main placeholder
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
+  <a href="/about">about</a>
 </template>
