added css and about page

--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -1,3 +1,31 @@
 <template name="about">
-	about placeholder
+<section id="main" class="wrapper">
+	<div class="inner 12u">
+		<header class="align-center">
+			<h1>About Us</h1>
+			<p>Aliquam erat volutpat nam dui </p>
+		</header>
+		<hr />
+		<header>
+			<h2>Heading 1</h2>
+			<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+			<h2>Heading 2</h2>
+			<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+		</header>
+	</div>
+</section>
+<footer id="footer">
+	<div class="inner">
+		<h2>Contact</h2>
+		<ul class="actions">
+			<li><span class="icon fa-phone"></span> <a href="#">(000) 000-0000</a></li>
+			<li><span class="icon fa-envelope"></span> <a href="#">information@untitled.tld</a></li>
+			<li><span class="icon fa-map-marker"></span> 123 Somewhere Road, Nashville, TN 00000</li>
+		</ul>
+	</div>
+	<div class="copyright">
+		&copy; Tabao
+	</div>
+</footer>
+
 </template>
