added front-end request form and marketplace placeholder

--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -1,5 +1,5 @@
 <template name="header">
-<header id="header">
+	<header id="header">
 		<nav class="left">
 			<a href="#menu"><span>Menu</span></a>
 		</nav>
@@ -10,11 +10,13 @@
 		<nav id="menu">
 			<ul class="links">
 				<li><a href="/">Home</a></li>
+				<li><a href="/request">Request</a></li>
+				<li><a href="/deliver">Deliver</a></li>
 				<li><a href="/about">About</a></li>
 			</ul>
 			<ul class="actions vertical">
 				<li><a href="#" class="button fit">Login</a></li>
 			</ul>
 		</nav>
-</header>
+	</header>
 </template>
