--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -2,10 +2,14 @@
 	<!-- Banner -->
 			<section id="banner">
 				<div class="content">
+					{{#if currentUser}}
+					<h1>Welcome, {{currentUser.username}}</h1>
+					{{else}}
 					<h1>Ipsum sed lorem</h1>
+					{{/if}}
 					<p>Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod<br />sed arcu cras consecuat lorem ipsum dolor sit amet.</p>
 					<ul class="actions">
-						<li><a href="#one" class="button scrolly">Get Started</a></li>
+						<li><a class="button scrolly">{{> loginButtons}}</a></li>
 					</ul>
 				</div>
 			</section>
@@ -13,16 +17,20 @@
 		<!-- One -->
 			<section id="one" class="wrapper">
 			<div class="row inner">
-				<div class="4u 12u$(medium)">
-					<h3>Interdum sapien gravida</h3>
+				<div class="3u 12u$(medium)">
+					<h3>Feature 1</h3>
 					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 				</div>
-				<div class="4u 12u$(medium)">
-					<h3>Faucibus consequat lorem</h3>
+				<div class="3u 12u$(medium)">
+					<h3>Feature 2</h3>
 					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 				</div>
-				<div class="4u$ 12u$(medium)">
-					<h3>Accumsan montes viverra</h3>
+				<div class="3u 12u$(medium)">
+					<h3>Feature 3</h3>
+					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+				</div>
+				<div class="3u$ 12u$(medium)">
+					<h3>Feature 4</h3>
 					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 				</div>
 			</div>
