--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1852,6 +1852,7 @@
 	input[type="password"],
 	input[type="email"],
 	input[type="tel"],
+	input[type="number"],
 	select,
 	textarea {
 		-moz-appearance: none;
