--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -2,6 +2,7 @@
 <section id="main" class="wrapper">
 	<div class="inner 12u">
 		<header class="align-center">
+			<img class="image round" src="images/TabaoLogo.png" style="max-width:30%"/>
 			<h1>About Us</h1>
 			<p>Aliquam erat volutpat nam dui </p>
 		</header>
