--- a/client/templates/request.html
+++ b/client/templates/request.html
@@ -3,7 +3,7 @@
 <div class="inner">
 <h1 align="center">Request Delivery</h1>
 
-	<form method="post" action="#">
+	<form method="post" class="new-request">
 		<div class="row uniform">
 			<div class="1u 12u$(xsmall)"><h3>Item</h3></div>
 			<div class="11u$ 12u$(xsmall)">
@@ -15,10 +15,10 @@
 				<div class="select-wrapper">
 					<select name="fromLocation" id="fromLocation">
 						<option value="">- Select Hawker Centre -</option>
-						<option value="1">Hawker 1</option>
-						<option value="1">Hawker 2</option>
-						<option value="1">Hawker 3</option>
-						<option value="1">Hawker 4</option>
+						<option value="Hawker 1">Hawker 1</option>
+						<option value="Hawker 2">Hawker 2</option>
+						<option value="Hawker 3">Hawker 3</option>
+						<option value="Hawker 4">Hawker 4</option>
 					</select>
 				</div>
 			</div>
