--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -1,8 +1,8 @@
 <template name="profile">
 <section class="wrapper">
 	<div class="inner" align="center">
-		<h1>{{#if username}}{{username}}{{else}}User not found{{/if}}</h1>
-		profile placeholder
+		<h1>{{#if user}}{{user.username}}{{else}}User not found{{/if}}</h1>
+		User since: {{user.createdAt}}
 	</div>
 </section>
 </template>
