--- a/client/templates/request.html
+++ b/client/templates/request.html
@@ -7,14 +7,13 @@
 		<div class="row uniform">
 			<div class="1u 12u$(xsmall)"><h3>Item</h3></div>
 			<div class="11u$ 12u$(xsmall)">
-				<input type="text" name="itemName" id="itemName" placeholder="Item Name" />
+				<input type="text" name="itemName" id="itemName" placeholder="Item Name" required />
 			</div>
 			
 			<div class="1u 12u$(xsmall)"><h3>From</h3></div>
 			<div class="6u 12u$(xsmall)">
 				<div class="select-wrapper">
-					<select name="fromLocation" id="fromLocation">
-						<option value="">- Select Hawker Centre -</option>
+					<select name="fromLocation" id="fromLocation" required>
 						<option value="Hawker 1">Hawker 1</option>
 						<option value="Hawker 2">Hawker 2</option>
 						<option value="Hawker 3">Hawker 3</option>
@@ -23,15 +22,15 @@
 				</div>
 			</div>
 			<div class="5u$ 12u$(xsmall)">
-				<input type="text" name="fromStall" id="fromStall" placeholder="Stall" />
+				<input type="text" name="fromStall" id="fromStall" placeholder="Stall" required />
 			</div>
 			<div class="1u 12u$(xsmall)"><h3>To</h3></div>
 			<div class="11u$ 12u$(xsmall)">
-				<input type="text" name="toLocation" id="toLocation" placeholder="Address" />
+				<input type="text" name="toLocation" id="toLocation" placeholder="Address" required />
 			</div>
 			<div class="1u 12u$(xsmall)"><h3>Price($)</h3></div>
 			<div class="11u$ 12u$(xsmall)">
-				<input type="number" name="price" id="price" min="0" step="0.1" />
+				<input type="number" name="price" id="price" min="0" step="0.1" required />
 			</div>
 			<div class="1u 12u$(xsmall)"><h3>Remarks</h3></div>
 			<div class="11u$ 12u$(xsmall)">
