main page text update

--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -7,7 +7,7 @@
 					{{else}}
 					<h1>Ipsum sed lorem</h1>
 					{{/if}}
-					<p>Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod<br />sed arcu cras consecuat lorem ipsum dolor sit amet.</p>
+					<p>What would you like to eat today?</p>
 					<ul class="actions">
 						{{#if currentUser}}
 						<li><a href="/request" class="button">Request</a></li>
@@ -22,34 +22,30 @@
 		<!-- One -->
 			<section id="one" class="wrapper">
 			<div class="row inner">
-				<div class="3u 12u$(medium)">
-					<h3>Feature 1</h3>
+				<div class="4u 12u$(medium)">
+					<h3>No minimum cost</h3>
 					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 				</div>
-				<div class="3u 12u$(medium)">
-					<h3>Feature 2</h3>
+				<div class="4u 12u$(medium)">
+					<h3>Order from your beloved hawker</h3>
 					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 				</div>
-				<div class="3u 12u$(medium)">
-					<h3>Feature 3</h3>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-				</div>
-				<div class="3u$ 12u$(medium)">
-					<h3>Feature 4</h3>
+				<div class="4u 12u$(medium)">
+					<h3>Power of crowdsourcing</h3>
 					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 				</div>
 			</div>
 			</section>
 			<section id="two" class="wrapper style1 special">
 				<div class="inner">
-					<h2>Feugiat lorem</h2>
+					<h2>Tabao</h2>
 					<figure>
 					    <blockquote>
-					        "Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra<br /> magna etiam lorem ultricies in diam. Sed arcu cras consequat."
+					        "Great food, Affordable price"
 					    </blockquote>
 					    <footer>
-					        <cite class="author">Jane Anderson</cite>
-					        <cite class="company">CEO, Untitled</cite>
+					        <cite class="author">Ryan & Justin</cite>
+					        <cite class="company">Founder, Tabao</cite>
 					    </footer>
 					</figure>
 				</div>
