added request acceptance

--- a/client/templates/deliver.html
+++ b/client/templates/deliver.html
@@ -14,12 +14,14 @@
 					</thead>
 					<tbody>
 						{{#each requests}}
+							{{#unless Deliverer}}
 							<tr>
 								<td><a href="viewRequest/{{_id}}">{{itemName}}</a></td>
 								<td>{{fromLocation}}</td>
 								<td>{{toLocation}}</td>
 								<td>{{Price}}</td>
 							</tr>
+							{{/unless}}
 						{{/each}}
 					</tbody>
 				</table>
