added moment library and updated readme

--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -5,7 +5,7 @@
 					{{#if currentUser}}
 					<h1>Welcome, {{currentUser.username}}</h1>
 					{{else}}
-					<h1>Ipsum sed lorem</h1>
+					<h1>Welcome to Tabao</h1>
 					{{/if}}
 					<p>What would you like to eat today?</p>
 					<ul class="actions">
