--- a/client/templates/deliver.html
+++ b/client/templates/deliver.html
@@ -17,7 +17,7 @@
 							{{#unless Deliverer}}
 							<tr>
 								<td><a href="viewRequest/{{_id}}">{{itemName}}</a></td>
-								<td>{{fromLocation}}</td>
+								<td>{{getHawkerName fromLocation}}</td>
 								<td>{{toLocation}}</td>
 								<td>{{Price}}</td>
 							</tr>
