changes to main and about page

--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -4,14 +4,14 @@
 		<header class="align-center">
 			<img class="image round" src="images/TabaoLogo.png" style="max-width:30%"/>
 			<h1>About Us</h1>
-			<p>Aliquam erat volutpat nam dui </p>
+			<p> Tabao is a local food ordering platform like no other. Leveraging on crowdsourcing we aim to bring you food from the corners of Singapore at the lowest cost.  </p>
 		</header>
 		<hr />
 		<header>
-			<h2>Heading 1</h2>
-			<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
-			<h2>Heading 2</h2>
-			<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+			<h2>Request</h2>
+			<p>Users can request food, stating what food they would like and where they want it from. Prices are negotiable between individual parties.</p>
+			<h2>Deliver</h2>
+			<p>User can accept requests that are convinient for them, and pick up food en route to their intended destination to earn a sum.</p>
 		</header>
 	</div>
 </section>
@@ -19,9 +19,9 @@
 	<div class="inner">
 		<h2>Contact</h2>
 		<ul class="actions">
-			<li><span class="icon fa-phone"></span> <a href="#">(000) 000-0000</a></li>
-			<li><span class="icon fa-envelope"></span> <a href="#">information@untitled.tld</a></li>
-			<li><span class="icon fa-map-marker"></span> 123 Somewhere Road, Nashville, TN 00000</li>
+			<li><span class="icon fa-phone"></span> <a href="#">(+65) 6938-1111</a></li>
+			<li><span class="icon fa-envelope"></span> <a href="#">tabao@untitled.tld</a></li>
+			<li><span class="icon fa-map-marker"></span> 123 Seaseme St, Singapore, SG 579721</li>
 		</ul>
 	</div>
 	<div class="copyright">
