--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -24,15 +24,15 @@
 			<div class="row inner">
 				<div class="4u 12u$(medium)">
 					<h3>No minimum cost</h3>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+					<p>With this plaform, there is no minimum cost! Simply state a reasonable price, and someone en route to your location might just take up your request!</p>
 				</div>
 				<div class="4u 12u$(medium)">
-					<h3>Order from your beloved hawker</h3>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+					<h3>Unlimited Choices</h3>
+					<p>Not bounded by any affiliations with restaurants, sky's the limit! Any food you desire you can have it without leaving the comfort of your home!</p>
 				</div>
 				<div class="4u 12u$(medium)">
 					<h3>Power of crowdsourcing</h3>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+					<p>Harnessing the power of the public, there will definitely be someone that is convinient to pick up your requests.</p>
 				</div>
 			</div>
 			</section>
