updated readme and updated front-end content

--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -11,7 +11,7 @@
 			<h2>Request</h2>
 			<p>Users can request food, stating what food they would like and where they want it from. Prices are negotiable between individual parties.</p>
 			<h2>Deliver</h2>
-			<p>User can accept requests that are convinient for them, and pick up food en route to their intended destination to earn a sum.</p>
+			<p>User can accept requests that are convenient for them, and pick up food en-route to their intended destinations to earn a sum.</p>
 		</header>
 	</div>
 </section>
@@ -19,9 +19,9 @@
 	<div class="inner">
 		<h2>Contact</h2>
 		<ul class="actions">
-			<li><span class="icon fa-phone"></span> <a href="#">(+65) 6938-1111</a></li>
-			<li><span class="icon fa-envelope"></span> <a href="#">tabao@untitled.tld</a></li>
-			<li><span class="icon fa-map-marker"></span> 123 Seaseme St, Singapore, SG 579721</li>
+			<li><span class="icon fa-phone"></span> <a href="#">(+65) 6123-4567</a></li>
+			<li><span class="icon fa-envelope"></span> <a href="#">contact@tabao.com</a></li>
+			<li><span class="icon fa-map-marker"></span>13 Computing Drive, Singapore 117417</li>
 		</ul>
 	</div>
 	<div class="copyright">
