--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -24,15 +24,15 @@
 			<div class="row inner">
 				<div class="4u 12u$(medium)">
 					<h3>No minimum cost</h3>
-					<p>With this plaform, there is no minimum cost! Simply state a reasonable price, and someone en route to your location might just take up your request!</p>
+					<p>With this plaform, there is no minimum cost! Simply state a reasonable price, and someone en-route to your location might just take up your request!</p>
 				</div>
 				<div class="4u 12u$(medium)">
 					<h3>Unlimited Choices</h3>
-					<p>Not bounded by any affiliations with restaurants, sky's the limit! Any food you desire you can have it without leaving the comfort of your home!</p>
+					<p>Not bounded by any affiliations with restaurants, the sky's the limit! Any food you desire can be obtained without leaving the comfort of your home!</p>
 				</div>
 				<div class="4u 12u$(medium)">
 					<h3>Power of crowdsourcing</h3>
-					<p>Harnessing the power of the public, there will definitely be someone that is convinient to pick up your requests.</p>
+					<p>Harnessing the power of the public, there will definitely be someone that is convenient to pick up your requests.</p>
 				</div>
 			</div>
 			</section>
@@ -45,7 +45,7 @@
 					    </blockquote>
 					    <footer>
 					        <cite class="author">Ryan & Justin</cite>
-					        <cite class="company">Founder, Tabao</cite>
+					        <cite class="company">Founders, Tabao</cite>
 					    </footer>
 					</figure>
 				</div>
