fixed NaN issue with price at request page

--- a/client/templates/request.html
+++ b/client/templates/request.html
@@ -29,7 +29,7 @@
 			</div>
 			<div class="1u 12u$(xsmall)"><h3>Price($)</h3></div>
 			<div class="11u$ 12u$(xsmall)">
-				<input type="number" name="price" id="price" min="0" step="0.1" required />
+				<input type="number" name="price" id="price" min="0" step="0.1" value="0" required />
 			</div>
 			<div class="1u 12u$(xsmall)"><h3>Remarks</h3></div>
 			<div class="11u$ 12u$(xsmall)">
