changed login ui

--- a/client/css/sAlert.css
+++ b/client/css/sAlert.css
@@ -3,11 +3,11 @@
 }
 
 .s-alert-warning{
-	background:#771F1F;
+	background:#9b111e;
 }
 
 .s-alert-error{
-	background:#771F1F;
+	background:#9b111e;
 }
 
 .s-alert-info{
