--- a/client/templates/viewRequest.html
+++ b/client/templates/viewRequest.html
@@ -60,7 +60,7 @@
 		</div>
 		{{#if equals request.Completed false}}
 		<form id="newComment">
-			<input type="text" name="comment" placeholder="Enter new comment" />
+			<input type="text" name="comment" placeholder="Enter to send" />
 		</form>
 		{{/if}}
 		{{/if}}
