--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
 @import url(sAlert.css);
+@import url(select2.css);
 @import "https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:300,400|Pacifico";
 
 /*
@@ -1927,6 +1928,7 @@
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	input[type="number"],
 	select {
 		height: 3.5em;
 		line-height: 3.5em;
