--- a/client/templates/request.html
+++ b/client/templates/request.html
@@ -1,38 +1,39 @@
 <template name="request">
 <section class="wrapper">
+
 <div class="inner">
 <h1 align="center">Request Delivery</h1>
 
 	<form method="post" class="new-request">
 		<div class="row uniform">
-			<div class="1u 12u$(xsmall)"><h3>Item</h3></div>
-			<div class="11u$ 12u$(xsmall)">
+			<div class="2u 12u$(xsmall)"><h3>Item</h3></div>
+			<div class="10u$ 12u$(xsmall)">
 				<input type="text" name="itemName" id="itemName" placeholder="Item Name" required />
 			</div>
 			
-			<div class="1u 12u$(xsmall)"><h3>From</h3></div>
+			<div class="2u 12u$(xsmall)"><h3>From</h3></div>
 			<div class="6u 12u$(xsmall)">
 				<div class="select-wrapper">
-					<select name="fromLocation" id="fromLocation" required>
+					<select name="fromLocation" style="width:100%" id="hawkerDropdown">
 						{{#each allHawkers}}
 						<option value="{{_id}}">{{Name}}</option>
 						{{/each}}
 					</select>
 				</div>
 			</div>
-			<div class="5u$ 12u$(xsmall)">
+			<div class="4u$ 12u$(xsmall)">
 				<input type="text" name="fromStall" id="fromStall" placeholder="Stall" required />
 			</div>
-			<div class="1u 12u$(xsmall)"><h3>To</h3></div>
-			<div class="11u$ 12u$(xsmall)">
+			<div class="2u 12u$(xsmall)"><h3>To</h3></div>
+			<div class="10u$ 12u$(xsmall)">
 				<input type="text" name="toLocation" id="toLocation" placeholder="Address" required />
 			</div>
-			<div class="1u 12u$(xsmall)"><h3>Price($)</h3></div>
-			<div class="11u$ 12u$(xsmall)">
+			<div class="2u 12u$(xsmall)"><h3>Price($)</h3></div>
+			<div class="10u$ 12u$(xsmall)">
 				<input type="number" name="price" id="price" min="0" step="0.1" value="0" required />
 			</div>
-			<div class="1u 12u$(xsmall)"><h3>Remarks</h3></div>
-			<div class="11u$ 12u$(xsmall)">
+			<div class="2u 12u$(xsmall)"><h3>Remarks</h3></div>
+			<div class="10u$ 12u$(xsmall)">
 				<textarea name="remarks" id="remarks" placeholder="Any Remarks" rows="3"></textarea>
 			</div>
 			<!-- Break -->
