--- a/client/templates/deliver.html
+++ b/client/templates/deliver.html
@@ -2,6 +2,9 @@
 	<section class="wrapper">
 		<div class="inner">
 			<h1 align="center">Delivery Requests</h1>
+			{{#if equals requests.count 0}}
+			<h3 align="center">No pending delivery requests at the moment, check back in a while!</h3>
+			{{else}}
 			<div class="table-wrapper">
 				<table class="alt">
 					<thead>
@@ -14,18 +17,17 @@
 					</thead>
 					<tbody>
 						{{#each requests}}
-							{{#unless Deliverer}}
 							<tr>
 								<td><a href="viewRequest/{{_id}}">{{itemName}}</a></td>
 								<td>{{getHawkerName fromLocation}}</td>
 								<td>{{toLocation}}</td>
 								<td>{{Price}}</td>
 							</tr>
-							{{/unless}}
 						{{/each}}
 					</tbody>
 				</table>
 			</div>
+			{{/if}}
 		</div>
 	</section>
 </template>
