--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -18,18 +18,18 @@
 					</ul>
 					{{else}}
 					<div class="inner">
-						<form method="post" class="login" id="loginForm" style="display:block; color:white; text-weight:bold;" align="center">
+						<form method="post" class="login" id="loginForm" style="display:block; color:white;" align="center">
 							<input type="text" required name="username" placeholder="Username" /><br>
 							<input type="password" required name="password" placeholder="Password" /><br>
 							<input type="submit" value="Login" class="button fit" />
-							<button class="special" id="loginSignupToggle">Click Here to Signup</button>
+							<button class="special" id="loginSignupToggle" style="padding: 0 10%">Click here to Signup</button>
 						</form>
-						<form method="post" class="signup" id="signupForm" style="display:none; color:white; text-weight:bold;" align="center">
+						<form method="post" class="signup" id="signupForm" style="display:none; color:white;" align="center">
 							<input type="text" required name="username" placeholder="Username" /><br>
 							<input type="password" required name="password" placeholder="Password" /><br>
 							<input type="password" required name="passwordConfirm" onchange="form.password.pattern = this.value" placeholder="Confirm Password" /><br>
 							<input type="submit" value="Signup" class="button special fit" />
-							<button id="loginSignupToggle">Click Here to Login</button>
+							<button id="loginSignupToggle" style="padding: 0 10%">Click here to Login</button>
 						</form>
 					</div>
 					{{/if}}
