added rating system frontend

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -2,6 +2,7 @@
 @import url(font-awesome.min.css);
 @import url(sAlert.css);
 @import url(select2.css);
+@import url(ratingForm.css);
 @import "https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:300,400|Pacifico";
 
 /*
