--- a/client/templates/unauthorised.html
+++ b/client/templates/unauthorised.html
@@ -2,9 +2,9 @@
 <section id="banner">
 	<div class="content">
 		<h1>Unauthorised</h1>
-		<p>You are not authorised to view this page. Please log in or sign up.</p>
+		<p style="color:white">You are not authorised to view this page. Please log in or sign up.</p>
 		<ul class="actions">
-			<li><a href="/login" class="button">Login / Signup</a></li>
+			<li><a href="/" class="button">Back to Home</a></li>
 		</ul>
 	</div>
 </section>
